--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ plugins:
 
 navigation:
   - title: "Introduction"
-    url: /prueba_io/introduction.html
+    url: /prueba_io/introduction.md
   - title: "Chapter 1"
-    url: /prueba_io/chapter1.html
+    url: /prueba_io/chapter1.md
   - title: "Chapter 2"
-    url: /prueba_io/chapter2.html
+    url: /prueba_io/chapter2.md
